Usable, but quite slow

--- a/Ultrasonic.ipynb
+++ b/Ultrasonic.ipynb
@@ -9,8 +9,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.013750553131103516 cm\n",
-      "\n",
       "False cm\n",
       "\n",
       "False cm\n",
@@ -23,57 +21,107 @@
       "\n",
       "False cm\n",
       "\n",
-      "False cm\n",
+      "0.00019860267639160156 cm\n",
       "\n",
-      "0.006118297576904297 cm\n",
-      "\n",
-      "0.005484819412231445 cm\n",
-      "\n",
-      "0.006670951843261719 cm\n",
-      "\n",
-      "0.0020902156829833984 cm\n",
-      "\n",
-      "0.00671076774597168 cm\n",
-      "\n",
-      "0.001947164535522461 cm\n",
-      "\n",
-      "0.0014660358428955078 cm\n",
-      "\n",
-      "0.0017561912536621094 cm\n",
-      "\n",
-      "0.0017414093017578125 cm\n",
-      "\n",
-      "0.006455421447753906 cm\n",
-      "\n",
-      "0.006395578384399414 cm\n",
-      "\n",
-      "0.006854057312011719 cm\n",
+      "0.00048828125 cm\n",
       "\n",
       "False cm\n",
       "\n",
+      "0.0014214515686035156 cm\n",
+      "\n",
       "False cm\n",
       "\n",
-      "0.003075838088989258 cm\n",
+      "0.008462905883789062 cm\n",
       "\n",
-      "0.0057830810546875 cm\n",
+      "False cm\n",
       "\n",
-      "0.010882139205932617 cm\n",
+      "0.014209985733032227 cm\n",
       "\n",
-      "0.013362646102905273 cm\n",
+      "0.014078855514526367 cm\n",
       "\n",
-      "0.013423919677734375 cm\n",
+      "0.01405644416809082 cm\n",
       "\n",
-      "0.013334512710571289 cm\n",
+      "0.014080286026000977 cm\n",
       "\n",
-      "0.013321161270141602 cm\n",
+      "0.014073371887207031 cm\n",
       "\n",
-      "0.013347387313842773 cm\n",
+      "False cm\n",
       "\n",
-      "0.01331639289855957 cm\n",
+      "False cm\n",
       "\n",
-      "0.013364076614379883 cm\n",
+      "False cm\n",
       "\n",
-      "0.013212442398071289 cm\n",
+      "False cm\n",
+      "\n",
+      "0.0057220458984375 cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "0.004070281982421875 cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "0.0057811737060546875 cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "0.0006890296936035156 cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "0.003680706024169922 cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "0.0049517154693603516 cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "0.001093149185180664 cm\n",
+      "\n",
+      "0.0009949207305908203 cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "0.0009870529174804688 cm\n",
+      "\n",
+      "0.0010437965393066406 cm\n",
+      "\n",
+      "0.0005223751068115234 cm\n",
+      "\n",
+      "0.0009622573852539062 cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "0.0006542205810546875 cm\n",
+      "\n",
+      "0.0008263587951660156 cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "0.0003211498260498047 cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "0.00024771690368652344 cm\n",
+      "\n",
+      "False cm\n",
+      "\n",
+      "0.0003757476806640625 cm\n",
+      "\n",
+      "0.0004222393035888672 cm\n",
+      "\n",
+      "0.0004227161407470703 cm\n",
+      "\n",
+      "False cm\n",
       "\n",
       "User interrupted\n"
      ]
@@ -111,7 +159,7 @@
     "    sonic_setup()\n",
     "    try:\n",
     "        while True:\n",
-    "            print(duration(), 'cm')\n",
+    "            print(duration(), 's')\n",
     "            print('')\n",
     "            time.sleep(0.3)\n",
     "    except KeyboardInterrupt: print('User interrupted')\n",
@@ -124,6 +172,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
