--- a/vision/main.ipynb
+++ b/vision/main.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.79 0.80 0.79 0.79 0.79 0.79 0.78 0.74 0.78 0.78 0.59 0.59 0.59 0.59 0.69 0.69 0.73 0.59 0.59 0.59 0.72 0.73 "
+      "1313 69.73 1586 69.70 1587 1894 69.05 1894 1893 68.67 2167 68.14 1912 67.50 2184 1911 58.10 1895 1894 62.57 1365 69.27 1074 69.68 1058 58.33 1911 1894 62.72 1621 69.52 1057 floor material 1621 1621 63.39 1604 69.70 1893 69.26 1603 1620 1876 1621 63.20 1894 69.35 1876 69.69 1604 2167 1876 69.59 1603 1348 69.70 1893 69.71 1331 1912 1910 floor light 54.12 1912 54.20 1911 54.20 1911 54.17 1911 54.16 1911 54.18 1655 54.21 1639 54.18 1895 54.18 1638 54.18 1638 69.81 1638 69.82 1638 54.16 1894 54.15 1638 54.13 1638 54.15 802 54.07 1075 54.17 1074 54.18 1346 yellow close up 54.11 1638 54.13 "
      ]
     },
     {
@@ -19,8 +19,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-558300681f94>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    139\u001b[0m             \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mterminate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 141\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-3-558300681f94>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    112\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m                     \u001b[0;31m# Color:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 114\u001b[0;31m                     \u001b[0mcamera\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcapture\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrgb_array\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rgb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    115\u001b[0m                     \u001b[0mfreq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolor_to_freq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mavg_color\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrgb_array\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m                     \u001b[0;31m# print(freq, end=' ')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-18-9ca54e504de0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    135\u001b[0m             \u001b[0mproc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 137\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-18-9ca54e504de0>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    118\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m                     \u001b[0;31m# Color:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 120\u001b[0;31m                     \u001b[0mcamera\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcapture\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrgb_array\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rgb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    121\u001b[0m                     \u001b[0mfreq\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolor_to_freq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mavg_color\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrgb_array\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m                     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfreq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/srv/pl-app/lib/python3.5/site-packages/picamera/camera.py\u001b[0m in \u001b[0;36mcapture\u001b[0;34m(self, output, format, use_video_port, resize, splitter_port, bayer, **options)\u001b[0m\n\u001b[1;32m   1419\u001b[0m             \u001b[0;31m# Wait for the callback to set the event indicating the end of\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1420\u001b[0m             \u001b[0;31m# image capture\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1421\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mencoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCAPTURE_TIMEOUT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1422\u001b[0m                 raise PiCameraRuntimeError(\n\u001b[1;32m   1423\u001b[0m                     'Timed out waiting for capture to end')\n",
       "\u001b[0;32m/srv/pl-app/lib/python3.5/site-packages/picamera/encoders.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    391\u001b[0m         \u001b[0mthe\u001b[0m \u001b[0mmethod\u001b[0m \u001b[0mreturns\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mOtherwise\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mit\u001b[0m \u001b[0mreturns\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    392\u001b[0m         \"\"\"\n\u001b[0;32m--> 393\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    394\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    395\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/lib/python3.5/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    547\u001b[0m             \u001b[0msignaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_flag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    548\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0msignaled\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 549\u001b[0;31m                 \u001b[0msignaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cond\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    550\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0msignaled\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    551\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -32,25 +32,27 @@
    "source": [
     "import io\n",
     "import os\n",
+    "import signal\n",
     "import RPi.GPIO as GPIO\n",
     "import time\n",
     "import subprocess\n",
     "import picamera\n",
     "import numpy as np\n",
-    "import pyaudio\n",
     "\n",
     "from google.cloud import vision\n",
     "from google.cloud.vision import types\n",
     "\n",
     "TRIG = 11\n",
     "ECHO = 12\n",
-    "MIN_V = 0.45\n",
-    "MAX_V = 0.8\n",
+    "MIN_V = 45\n",
+    "MAX_V = 70\n",
     "MIN_T = 0.00011764705\n",
     "MAX_T = 0.02352941176\n",
     "TMP_FILE = 'resources/tmp.jpg'\n",
     "FS = 5000       # sampling rate, Hz, must be integer\n",
-    "SENSE_DUR = 1   # no idea what unit this is in, may be float\n",
+    "SENSE_DUR = 2   # no idea what unit this is in, may be float\n",
+    "SPEAK_VOL = 70\n",
+    "IMG_CYCLE = 20\n",
     "\n",
     "def set_volume(percent):\n",
     "    \"\"\"OS call to set volume\"\"\"\n",
@@ -58,11 +60,15 @@
     "\n",
     "def speak(string):\n",
     "    \"\"\"External voice program process\"\"\"\n",
+    "    set_volume(SPEAK_VOL)\n",
     "    subprocess.call(['espeak', string])\n",
     "    \n",
-    "# Part II: Regarding distance\n",
+    "# Part II: Regarding ultrasonic\n",
     "def dur_to_vol(t):\n",
     "    return MAX_V - ((MAX_V - MIN_V) / (MAX_T - MIN_T))*t\n",
+    "\n",
+    "def sound_proc(freq):\n",
+    "    return subprocess.Popen(['speaker-test', '--frequency', str(freq), '--test', 'sine'])\n",
     "\n",
     "def duration():\n",
     "    \"\"\"Calculated with sonic sensor\"\"\"\n",
@@ -104,15 +110,15 @@
     "            rgb_array = np.empty((240, 320, 3), dtype=np.uint8)\n",
     "\n",
     "            # Turn on the sound\n",
-    "            set_volume(100)  # We won't modify the system's volume beyond this point\n",
-    "            p = pyaudio.PyAudio()\n",
+    "            set_volume(MIN_V)\n",
+    "            proc = sound_proc(440)\n",
     "\n",
     "            counter = 0  # To keep count for Google Vision\n",
     "            while True:\n",
     "                counter += 1\n",
     "                \n",
     "                # Image processing (rare)\n",
-    "                if counter == 10:\n",
+    "                if counter == IMG_CYCLE:\n",
     "                    counter = 0\n",
     "\n",
     "                    # Capture the image to file...\n",
@@ -126,11 +132,10 @@
     "                    response = client.label_detection(image=jpg)\n",
     "                    labels = response.label_annotations\n",
     "\n",
-    "                    # print('Labels:')\n",
     "                    for label in labels[:2]:\n",
-    "                        # print(label.description, end=' ')\n",
+    "                        print(label.description, end=' ')\n",
+    "                        proc.kill()\n",
     "                        speak(label.description)\n",
-    "                    set_volume(100)\n",
     "\n",
     "                # Audio sensing (common)\n",
     "                else:\n",
@@ -141,34 +146,25 @@
     "                        print(\"{:.2f}\".format(volume), end=' ')\n",
     "                    else:\n",
     "                        volume = MIN_V\n",
+    "                    set_volume(volume)\n",
     "\n",
     "                    # Color:\n",
     "                    camera.capture(rgb_array, 'rgb')\n",
     "                    freq = color_to_freq(avg_color(rgb_array))\n",
-    "                    # print(freq, end=' ')\n",
+    "                    print(freq, end=' ')\n",
     "                    \n",
     "                    # Play the sound\n",
-    "                    # generate samples, input is frequency\n",
-    "                    samples = (np.sin(2*np.pi*np.arange(FS*SENSE_DUR)*freq/FS)).astype(np.float32)\n",
-    "\n",
-    "                    # for paFloat32 sample values must be in range [-1.0, 1.0]\n",
-    "                    stream = p.open(format=pyaudio.paFloat32,\n",
-    "                                    channels=1,\n",
-    "                                    rate=FS,\n",
-    "                                    output=True,)\n",
-    "\n",
-    "                    stream.write(volume*samples)  # Note the volume\n",
-    "\n",
-    "                    stream.stop_stream()\n",
-    "                    stream.close()\n",
-    "                    \n",
-    "                # time.sleep(0.05)  # Periodic sleep to keep the process from being pre-empted\n",
+    "                    try:\n",
+    "                        proc.kill()  # Kill the old one first\n",
+    "                    except e:\n",
+    "                        print(e)\n",
+    "                    proc = sound_proc(freq)\n",
     "\n",
     "        except Exception as e:\n",
     "            print(e)\n",
     "        finally:\n",
     "            GPIO.cleanup()\n",
-    "            p.terminate()\n",
+    "            proc.kill()\n",
     "            \n",
     "main()"
    ]
